# cider-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  types.rs
tests/: mock_amapi.rs  mock_errors.rs  mock_library.rs  mock_play_items.rs  mock_playback.rs  mock_queue.rs  mock_settings.rs  mock_status.rs  mock_volume.rs  real_instance.rs
tests/common/: fixtures.rs  mod.rs
