[package]
name = "cider-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Giorgio Brullo"]
license = "MPL-2.0"
description = "Async Rust client for the Cider music player REST API"
readme = "README.md"
repository = "https://github.com/giorgiobrullo/cider-api"
homepage = "https://cider.sh"
keywords = ["cider", "apple-music", "music", "playback", "async"]
categories = ["api-bindings", "multimedia::audio", "asynchronous"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
